# sr_teleop_devices

./: .gitignore  CMakeLists.txt  README.md  aws.yml  package.xml  repository.rosinstall
cfg/: mount_config.cfg  pst_piezo_config.cfg
cyberglove/: CMakeLists.txt  package.xml
cyberglove/include/cyberglove/: cyberglove_publisher.h  cyberglove_service.h  serial_glove.h  serial_glove.hpp  xml_calibration_parser.h
cyberglove/launch/: cyberglove.launch
cyberglove/model/: cyberglove.xml
cyberglove/python_lib/: cyberglove_calibrer.py  cyberglove_library.py  cyberglove_mapper.py
cyberglove/src/: cyberglove_node.cpp  cyberglove_publisher.cpp  cyberglove_service.cpp  serial_glove.cpp  xml_calibration_parser.cpp
cyberglove/test/: test_calibration.cpp
cyberglove_trajectory/: CMakeLists.txt  package.xml  setup.py
cyberglove_trajectory/include/cyberglove_trajectory/: cyberglove_trajectory_publisher.h
cyberglove_trajectory/launch/: cyberglove.launch
cyberglove_trajectory/src/: cyberglove_trajectory_node.cpp  cyberglove_trajectory_publisher.cpp
cyberglove_trajectory/src/cyberglove_trajectory/: cyberglove_mock.py
launch/: sr_piezo_feedback_launch.launch
logitech_r400/: CMakeLists.txt  package.xml  setup.py
logitech_r400/config/: config.yaml
logitech_r400/src/logitech_r400/: logitech_r400
msg/: PiezoFeedback.msg
shuttle_xpress/: CMakeLists.txt  package.xml  setup.py
shuttle_xpress/src/shuttle_xpress/: shuttle_xpress
sr_camera/: CMakeLists.txt  package.xml
sr_camera/launch/: sr_camera.launch
sr_hazard_light/: 90-hazard-light.rules  CMakeLists.txt  README.md  package.xml  setup.py
sr_hazard_light/include/sr_hazard_light/: sr_hazard_light_driver.h
sr_hazard_light/launch/: sr_hazard_light.launch
sr_hazard_light/msg/: SetBuzzer.msg  SetLight.msg  Status.msg
sr_hazard_light/src/: main.c  sr_hazard_light_driver.c  sr_hazard_light_driver.cpp  sr_hazard_light_node.cpp
sr_hazard_light/src/sr_hazard_light/: sr_hazard_light_driver.cpp  sr_hazard_light_node.cpp
sr_hazard_light/srv/: ResetHazardLight.srv  SetBuzzer.srv  SetHazardLight.srv  SetLight.srv
sr_leap_motion/: CMakeLists.txt  README.md  package.xml  setup.py
sr_leap_motion/config/: leap_config.txt  leapd_config.json  rviz.rviz
sr_leap_motion/include/: lmc_filter_node.h
sr_leap_motion/launch/: hand_control.launch  leap.launch  leap_motion.launch  sr_leap_motion.launch
sr_leap_motion/resources/: leapd.service
sr_leap_motion/scripts/: README.md  install_leap.sh  install_sdk.sh  install_systemctl.sh  sample.py  start_service.sh  stop_service.sh
sr_leap_motion/src/: lmc_filter_node.cpp  sr_leap_motion.py  sr_leap_motion_tom.py  sr_leap_ros_driver.py
sr_leap_motion/src/sr_leap_motion/: lmc_filter_node.cpp  sr_leap_motion_node.py  sr_leap_ros_driver.py
sr_leap_motion/srv/: Skeleton.srv
sr_pedal/: 90-VEC-USB-Footpedal.rules  CMakeLists.txt  README.md  package.xml  setup.py
sr_pedal/include/: sr_pedal_driver.hpp
sr_pedal/include/sr_pedal/: sr_pedal_driver.h
sr_pedal/launch/: sr_pedal.launch
sr_pedal/msg/: Status.msg
sr_pedal/scripts/: sr_pedal_arm_remapper.py  sr_ur_release.py
sr_pedal/src/sr_pedal/: sr_pedal_driver.cpp  sr_triple_pedal.cpp  sr_triple_pedal.py  sr_triple_pedal_mock.py  sr_triple_pedal_pyusb.py
sr_piezo_feedback/: CMakeLists.txt  README.md  package.xml
sr_piezo_feedback/cfg/: SrPiezoFeedbackBiotac.cfg  SrPiezoFeedbackPST.cfg
sr_piezo_feedback/launch/: sr_piezo_feedback.launch
sr_piezo_feedback/msg/: PiezoFeedback.msg
sr_piezo_feedback/src/: biotac_mock_source.py  pst_mock_source.py  sr_piezo_feedback_node.py
sr_remappers/: CMakeLists.txt  package.xml
sr_remappers/include/sr_remappers/: calibration_parser.h  shadowhand_to_cyberglove_remapper.h  shadowhand_to_cybergrasp_remapper.h
sr_remappers/launch/: remapper_glove.launch
sr_remappers/param/: cyb.py  tmp.py
sr_remappers/src/: calibration_parser.cpp  shadowhand_to_cyberglove_remapper.cpp  shadowhand_to_cyberglove_remapper_node.cpp  shadowhand_to_cybergrasp_remapper.cpp  shadowhand_to_cybergrasp_remapper_node.cpp
sr_teleop_devices/: CMakeLists.txt  package.xml
sr_teleop_manager/: CMakeLists.txt  README.md  package.xml  setup.py
sr_teleop_manager/action/: PowerManager.action
sr_teleop_manager/config/: power_devices.yaml
sr_teleop_manager/msg/: BootProgress.msg  PowerFeedback.msg  PowerResult.msg
sr_teleop_manager/scripts/sr_teleop_manager/: remote_power_control.py
sr_teleop_manager/srv/: CustomRelayCommand.srv
src/: biotac_mock_source.py  pst_mock_source.py  sr_piezo_feedback_node.py
