<?xml version="1.0"?>
<!--
 Copyright 2022 Shadow Robot Company Ltd.
 This program is free software: you can redistribute it and/or modify it
 under the terms of the GNU General Public License as published by the Free
 Software Foundation version 2 of the License.
 This program is distributed in the hope that it will be useful, but WITHOUT
 ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
 FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
 more details.
 You should have received a copy of the GNU General Public License along
 with this program. If not, see <http://www.gnu.org/licenses/>.
-->
<package>
  <name>cyberglove_trajectory</name>
  <version>0.0.0</version>
  <description>A package that gets joint positions from the cyberglove via serial port, and calibrates them, remaps them to Shadow hand joints, and publishes them as joint trajectories in a single node</description>

  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>
  <license>GPL</license>

  <author email="toni@shadowrobot.com">Toni Oliver</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cyberglove</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sr_remappers</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>sr_utilities</build_depend>

  <run_depend>cyberglove</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sr_remappers</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>sr_utilities</run_depend>

</package>
