<?xml version="1.0"?>
<package format="2">
  <name>sr_hazard_light</name>
  <version>0.0.0</version>
  <description>The sr_hazard_light package</description>

  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>Private</license>

  <url type="website">http://www.shadowrobot.com</url>
  <url type="repository">https://github.com/shadow-robot/sr_teleop_internal</url>
  <url type="bugtracker">https://github.com/shadow-robot/sr_teleop_internal/issues</url>

  <author>Georgia Blanco-Litchfield</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>libhidapi-dev</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>libhidapi-dev</exec_depend>
  <exec_depend>libusb-1.0</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>python-evdev</exec_depend>
  <exec_depend>pynput-pip</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>python-pyusb-pip</exec_depend>
  <exec_depend>roscpp</exec_depend>

</package>
