<!--
 Copyright 2022 Shadow Robot Company Ltd.
 This program is free software: you can redistribute it and/or modify it
 under the terms of the GNU General Public License as published by the Free
 Software Foundation version 2 of the License.
 This program is distributed in the hope that it will be useful, but WITHOUT
 ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
 FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
 more details.
 You should have received a copy of the GNU General Public License along
 with this program. If not, see <http://www.gnu.org/licenses/>.
-->

<?xml version="1.0"?>
<package format="2">
  <name>sr_hazard_light</name>
  <version>0.0.0</version>
  <description>The sr_hazard_light package</description>

  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>Public</license>

  <url type="website">http://www.shadowrobot.com</url>
  <url type="repository">https://github.com/shadow-robot/sr_teleop_devices</url>
  <url type="bugtracker">https://github.com/shadow-robot/sr_teleop_devices/issues</url>

  <author>Georgia Blanco-Litchfield</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>libhidapi-dev</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>libhidapi-dev</exec_depend>
  <exec_depend>libusb-1.0</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>python3-evdev</exec_depend>
  <exec_depend>pynput-pip</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>python-pyusb-pip</exec_depend>
  <exec_depend>roscpp</exec_depend>

</package>
