<!--
 Copyright 2022 Shadow Robot Company Ltd.
 This program is free software: you can redistribute it and/or modify it
 under the terms of the GNU General Public License as published by the Free
 Software Foundation version 2 of the License.
 This program is distributed in the hope that it will be useful, but WITHOUT
 ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
 FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
 more details.
 You should have received a copy of the GNU General Public License along
 with this program. If not, see <http://www.gnu.org/licenses/>.
-->

<?xml version="1.0"?>
<package format="2">
  <name>sr_leap_motion</name>
  <version>0.0.0</version>
  <description>The sr_leap_motion package</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>GPLv2</license>

  <url type="website">http://www.shadowrobot.com</url>
  <url type="repository">https://github.com/shadow-robot/sr_teleop_devices</url>
  <url type="bugtracker">https://github.com/shadow-robot/sr_teleop_devices/issues</url>

  <author>Ethan Fowler</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>leap_motion</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>leap_motion</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>leap_motion</exec_depend>
  <exec_depend>rospy</exec_depend>
</package>
