<?xml version="1.0"?>
<package format="2">
  <name>sr_piezo_feedback</name>
  <version>0.0.1</version>
  <description>The sr_piezo_feedback package</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>
  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-sounddevice-pip</exec_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>python3-sounddevice-pip</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>

</package>
