<?xml version="1.0"?>
<!--
 Copyright 2022 Shadow Robot Company Ltd.
 This program is free software: you can redistribute it and/or modify it
 under the terms of the GNU General Public License as published by the Free
 Software Foundation version 2 of the License.
 This program is distributed in the hope that it will be useful, but WITHOUT
 ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
 FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
 more details.
 You should have received a copy of the GNU General Public License along
 with this program. If not, see <http://www.gnu.org/licenses/>.
-->
<package>
  <name>sr_remappers</name>
  <version>0.0.0</version>
  <description>Remaps data from and to the Shadow Robot hardware</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>sr_robot_msgs</build_depend>
  <build_depend>cyberglove</build_depend>
  <build_depend>sr_cyberglove_config</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>sr_robot_msgs</run_depend>
  <run_depend>cyberglove</run_depend>
  <run_depend>sr_cyberglove_config</run_depend>
</package>
